--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            
             "assets": [
               {
                 "glob": "**/*",
@@ -67,6 +68,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "app:build"
+            ,"proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
